<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C27B0"
    android:fitsSystemWindows="true"
    tools:context="com.example.deandrewmoore.healthmate.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/schoolPalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/health_mate"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:maxLines="1"
        android:textColorHint="#fff"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="21"
        android:maxLines="1"
        android:textColorHint="#fff"
        android:textStyle="normal" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:background="#7B1FA2"
        android:onClick="logIn"
        android:padding="12dp"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="160sp"
        android:layout_marginTop="40dp"
        android:onClick="signUpLinkClicked"
        android:text="@string/no_account_yet_create_one"
        android:textColor="#fff"
        android:textSize="16sp" />



</RelativeLayout>
